  b - Fixed a null pointer dereference seg-fault when checking for disallowed types
      TRQ-1408.
  b - Fix a counting problem when running multi-req ALPS jobs (cray only). TRQ-1431.
  b - Remove red herring error messages 'did not find work task for local request'.
      These tasks are no longer created since issue_Drequest blocks until it gets the
      reply and then processes it. TRQ-1423.
  e - When the mom has no jobs, check the aux path to make sure it is clean and
      that we aren't leaving any files there. TRQ-1240.

4.1.3
  b - fix a security loophole that potentially allowed an interactive job to run 
      as root due to not resetting a value when $attempt_to_make_dir and $tmpdir
      are set. TRQ-1078.
  b - fix down_on_error for the server. TRQ-1074.
  b - prevent pbs_server from spinning in select due to sockets in CLOSE_WAIT.
      TRQ-1161.
  e - Have pbs_server save the queues each time before exiting so that legacy 
      formats are converted to xml after upgrading. TRQ-1120.
  b - Fix phantom jobs being left on the pbs_moms and blocking jobs for Cray 
      hardware. TRQ-1162. (Thanks Matt Ezell)
  b - Fix a race condition on free'd memory when check for orphaned alps
      reservations. TRQ-1181. (Thanks Matt Ezell)
  b - If interrupted when reading the terminal type for an interactive job continue 
      trying to read instead of giving up. TRQ-1091.
  b - Fix displaying elapsed time for a job. TRQ-1133.
  b - Make offlining nodes persistent after shutting down. TRQ-1087.
  b - Fixed a memory leak when calling net_move. net_move allocates memory for args
      and starts a thread on send_job. However, args were not getting released
      in send_job.  TRQ-1199
  b - Changed pbs_connect to check for a server name. If it is passed in only that
      server name is tried for a connection. If no server name is given then the 
      default list is used. The previous behavior was to try the name passed in and